@@ -1,6 +1,7 @@
 20110111
  - (tim) [regress/host-expand.sh] Fix for building outside of read only
    source tree.
+ - (djm) [platform.c] Some missing includes that show up under -Werror
 
 20110109
  - (djm) [Makefile.in] list ssh_host_ecdsa key in PATHSUBS; spotted by
